--- a/css/styles.css
+++ b/css/styles.css
@@ -2,9 +2,14 @@
 @import './partial/variables.css';
 @import './partial/header.css';
 @import './partial/loader.css';
+@import './partial/about.css';
 
 body, html {
     margin: 0;
     padding: 0;
     font-family: LatoRegular;
+}
+
+.clear {
+    clear: both;
 }
