--- a/css/partial/about.css
+++ b/css/partial/about.css
@@ -1,18 +1,8 @@
 @import '../partial/variables.css';
 
-.about {
-    max-width: 1040px;
-    margin: 0 auto;
-    padding: 0 20px;
-}
-
-.about__title {
+.about-wrapper {
     width: 100%;
-    text-align: center;
-    font-size: 45px;
-    padding: 50px 0 10px 0;
-    margin-bottom: 40px;
-    border-bottom: 1px solid gray;
+    background: #f6f6f6;
 }
 
 .about__left {
@@ -105,6 +95,10 @@
     display: block;
     font-size: 14px;
     line-height: 20px;
+}
+
+.about__right--job:last-child span {
+    border-bottom: none;
 }
 
 @media screen and (max-width: 600px) {
