--- a/css/styles.css
+++ b/css/styles.css
@@ -3,11 +3,30 @@
 @import './partial/header.css';
 @import './partial/loader.css';
 @import './partial/about.css';
+@import './partial/services.css';
+@import './partial/pricing.css';
+@import './partial/portfolio.css';
+@import './partial/modal.css';
 
 body, html {
     margin: 0;
     padding: 0;
     font-family: LatoRegular;
+}
+
+.section {
+    max-width: 1040px;
+    margin: 0 auto;
+    padding: 0 20px;
+}
+
+.section__title {
+    width: 100%;
+    text-align: center;
+    font-size: 45px;
+    padding: 50px 0 10px 0;
+    margin-bottom: 40px;
+    border-bottom: 1px solid gray;
 }
 
 .clear {
