--- a/css/partial/modal.css
+++ b/css/partial/modal.css
@@ -94,15 +94,32 @@
 }
 
 @media screen and (max-width: 860px) {
+    .modal {
+        padding-top: 80px;
+    }
+
+    .modal__content {
+        width: 92%;
+        max-height: 80%;
+        overflow-y: scroll;
+    }
+
+    .modal__body p:first-of-type, .modal__body p:last-of-type {
+        line-height: 22px;
+    }
+
     .modal__header h2 {
         font-size: 20px;
+        margin: 5px 0;
     }
 
     .modal__body p:first-of-type {
-        font-size: 18px;
+        font-size: 16px;
+        margin: 5px 0;
     }
 
     .modal__body p:last-of-type {
-        font-size: 16px;
+        font-size: 14px;
+        margin: 5px 0;
     }
 }
