--- a/css/partial/footer.css
+++ b/css/partial/footer.css
@@ -44,3 +44,9 @@
 .footer__column--text a:hover {
     color: #2581dc;
 }
+
+@media screen and (max-width: 600px) {
+    .footer__column {
+        width: 100% !important;
+    }
+}
