--- a/css/partial/variables.css
+++ b/css/partial/variables.css
@@ -16,3 +16,8 @@
     font-family: LatoRegular;
     src: url(../../fonts/Lato-Regular.ttf);
 }
+
+@font-face {
+    font-family: LatoBold;
+    src: url(../../fonts/Lato-Bold.ttf);
+}
