--- a/css/partial/modal.css
+++ b/css/partial/modal.css
@@ -2,14 +2,13 @@
     display: none; 
     position: fixed; 
     z-index: 1; 
-    padding-top: 100px; 
+    padding-top: 80px; 
     left: 0;
     top: 0;
     width: 100%; 
     height: 100%; 
     overflow: auto; 
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.4); 
+    background-color: rgba(0,0,0,0.7); 
 }
 
 .modal__content {
@@ -17,35 +16,13 @@
     background-color: #fefefe;
     margin: auto;
     padding: 0;
-    border: 1px solid #888;
+    border: 1px solid #333;
     width: 80%;
-    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    box-shadow: 0 8px 8px 0 rgba(0,0,0,0.2);
     -webkit-animation-name: animatetop;
-    -webkit-animation-duration: 0.4s;
+    -webkit-animation-duration: 0.3s;
     animation-name: animatetop;
-    animation-duration: 0.4s;
-}
-
-@-webkit-keyframes animatetop {
-    from {
-        top:-300px; 
-        opacity:0
-    } 
-    to {
-        top:0; 
-        opacity:1
-    }
-}
-
-@keyframes animatetop {
-    from {
-        top:-300px; 
-        opacity:0
-    }
-    to {
-        top:0; 
-        opacity:1
-    }
+    animation-duration: 0.3s;
 }
 
 .modal__close {
@@ -72,6 +49,8 @@
 
 .modal__body {
     padding: 2px 16px;
+    max-height: 70%;
+    overflow-y: auto;
 }
 
 .modal__body p:first-of-type {
@@ -93,6 +72,28 @@
     box-sizing: border-box;
 }
 
+@-webkit-keyframes animatetop {
+    from {
+        top:-300px; 
+        opacity:0
+    } 
+    to {
+        top:0; 
+        opacity:1
+    }
+}
+
+@keyframes animatetop {
+    from {
+        top:-300px; 
+        opacity:0
+    }
+    to {
+        top:0; 
+        opacity:1
+    }
+}
+
 @media screen and (max-width: 860px) {
     .modal {
         padding-top: 80px;
@@ -100,8 +101,6 @@
 
     .modal__content {
         width: 92%;
-        max-height: 80%;
-        overflow-y: scroll;
     }
 
     .modal__body p:first-of-type, .modal__body p:last-of-type {
