--- a/css/styles.css
+++ b/css/styles.css
@@ -29,6 +29,7 @@ body, html {
     padding: 50px 0 10px 0;
     margin-bottom: 40px;
     border-bottom: 1px solid gray;
+    font-family: LatoBold;
 }
 
 .clear {
