--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,7 @@ body, html {
     margin: 0;
     padding: 0;
     font-family: LatoRegular;
+    width: 100%;
 }
 
 .section {
@@ -30,6 +31,7 @@ body, html {
     margin-bottom: 40px;
     border-bottom: 1px solid gray;
     font-family: LatoBold;
+    color: #333;
 }
 
 .clear {
